syntax = "proto3";

message State {
  bool server = 1;
  bool playing = 2;
  string stim_path = 3;
}

message Params {
  string req = 1;
  string sub = 2;
  int32 timeout = 3;
}